--- a/directive.html
+++ b/directive.html
@@ -3,7 +3,7 @@
 		<script src = "https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"> </script>
   	</head>
   	 <body> 
-		<input type="textbox" incrementable/>
+		<input type="textbox" 
   	 </body>
 
 	<script>
